--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="Kali Skill Share - Learn and share web development skills"
+      content="KaliShare - Web Development Skill Sharing Platform"
     />
-    <title>Kali Skill Share</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>KaliShare - Web Development Skills</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
